--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-6/int08-3-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-6/int08-3-6.component.html
@@ -1,9 +1,9 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">ประเมินความเสี่ยงโครงการรวม</h2>
+    <h2 class="ui header">ประเมินความเสี่ยงภาคพื้นที่รวม</h2>
 
     <div class="ui top attached header">
-      <span>ประเมินความเสี่ยงโครงการรวม</span>
+      <span>ประเมินความเสี่ยงภาคพื้นที่รวม</span>
     </div>
 
     <div class="ui attached segment">
@@ -536,7 +536,7 @@
 <div id="modalInt0836" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดเงื่อนไขแปลงค่า
+    กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงภาคพื้นที่
   </div>
 
   <div class="content">
@@ -671,7 +671,7 @@
 <div id="modalInt0836-weight-data" class="ui small modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดค่าน้ำหนัก
+    กำหนดค่าน้ำหนัก (%) ประเมินความเสี่ยงภาคพื้นที่
   </div>
 
   <div class="content">
