--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-6/int08-3-6.component.css
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-6/int08-3-6.component.css
@@ -6,7 +6,7 @@
     text-align: right;
 }
 
-#tableData tr td:nth-child(1), #tableData tr  td:nth-child(20) {
+#tableData tr td:nth-child(1) {
     text-align: center;
 }
 
