--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-5/int08-3-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-5/int08-3-5.component.html
@@ -38,10 +38,81 @@
             <i class="print icon"></i>
             พิมพ์
           </button>
+          <button class="ui mini default button" (click)="popupEditData()">
+            <i class="setting icon"></i>
+            กำหนด RL
+          </button>
         </div>
       </div>
 
-      <table class="ui small celled table">
+      <div class="ui grid center aligned">
+        <div class="sixteen wide column">
+          กระดาษทำการประเมินความเสี่ยงระบบการควบคุมภายในเพื่อพิจารณาคัดเลือกหน่วยงานรับตรวจสำนักงานสรรพสามิตภาค พื้นที่ และสาขา
+          <br> ปีงบประมาณ พ.ศ. 2561
+          <br> กลุ่มตรวจสอบภายใน กรมสรรพสามิต
+        </div>
+      </div>
+
+      <div class="ui nine column grid">
+        <div class="column">
+          ปัจจัยเสี่ยง:
+        </div>
+
+        <div class="column" style="width: 16%;">
+          8.ระบบการควบคุมภายใน
+        </div>
+
+        <div class="column" style="width: 16%; margin-left: -8%;">
+          &nbsp;
+          <br> ตำแหน่งว่าง
+          <br> ตำแหน่งว่าง
+          <br> ตำแหน่งว่าง
+        </div>
+
+        <div class="column" style="width: 11%;">
+          &nbsp;
+          <br> เท่ากับ
+          <br> อยู่ระหว่าง
+          <br> อยู่ระหว่าง
+        </div>
+
+        <div class="column right aligned" style="width: 6%;">
+          &nbsp;
+          <br> 0
+          <br> 1 - 2
+          <br> <div style="margin-right: 6%">3 - 4</div>
+        </div>
+
+        <div class="column" style="width: 12%;">
+          &nbsp;
+          <br> กำหนดค่าเป็น
+          <br> กำหนดค่าเป็น
+          <br> กำหนดค่าเป็น
+        </div>
+
+        <div class="column" style="width: 6%;">
+          &nbsp;
+          <br> 1
+          <br> 2
+          <br> 3
+        </div>
+
+        <div class="column" style="width: 12%;">
+          &nbsp;
+          <br> กำหนดค่าเป็น
+          <br> กำหนดค่าเป็น
+          <br> กำหนดค่าเป็น
+        </div>
+
+        <div class="column" style="width: 5%;">
+          &nbsp;
+          <br> ต่ำ
+          <br> กลาง
+          <br> สูง
+        </div>
+      </div>
+      <br>
+      <table id="tableData" class="ui small celled table">
         <thead>
           <tr style="text-align: center;">
             <th rowspan="2">ลำดับ</th>
@@ -54,16 +125,8 @@
             <th style="border-left: 1px solid rgba(34,36,38,.1); width:8%;">มีครบทุกตำแหน่ง</th>
             <th style="width:8%;">ว่าง 1-2</th>
             <th style="width:8%;">ว่าง 3-4</th>
-            <th style="width:8%;">
-              <a href="javascript:;" (click)="popupEditData()">
-                RL
-              </a>
-            </th>
-            <th style="width:8%;">
-              <a href="javascript:;" (click)="popupEditData()">
-                แปลค่า
-              </a>
-            </th>
+            <th style="width:8%;">RL</th>
+            <th style="width:8%;">แปลค่า</th>
           </tr>
         </thead>
         <tbody>
@@ -250,85 +313,104 @@
         </div>
       </div>
 
-      <div class="inline fields">
-        <div class="four wide field">
-          <label style="width: 9em;">เงื่อนไขที่ 1</label>
-          <select id="select1" class="ui dropdown">
-            <option value="0">Between</option>
-            <option value="1">Less Than</option>
-            <option value="2">More Than</option>
-          </select>
-        </div>
-        <div class="two wide field">
-          <input type="text" value="2">
-        </div>
-        <div class="one wide field">
-          <strong>&nbsp;&nbsp;&nbsp;ถึง</strong>
-        </div>
-        <div class="two wide field">
-          <input type="text" value="5">
-        </div>
-        <div class="three wide field">
-          <label class="custom-label-w-35">กำหนดค่าเป็น</label>
-          <input type="text" value="1">
-        </div>
-        <div class="four wide field">
-          <label class="custom-label-w-15">กำหนดค่าเป็น</label>
-          <input type="text" value="ต่ำ">
-        </div>
-      </div>
-
-      <div class="inline fields">
-        <div class="four wide field">
-          <label style="width: 9em;">เงื่อนไขที่ 2</label>
-          <select id="select2" class="ui dropdown">
-            <option value="0">Between</option>
-            <option value="1">Less Than</option>
-            <option value="2">More Than</option>
-          </select>
-        </div>
-        <div class="two wide field">
-          <input type="text" value="3">
-        </div>
-        <div class="one wide field">
-          <strong>&nbsp;&nbsp;&nbsp;ถึง</strong>
-        </div>
-        <div class="two wide field">
-          <input type="text" value="5">
-        </div>
-        <div class="three wide field">
-          <label class="custom-label-w-35">กำหนดค่าเป็น</label>
-          <input type="text" value="2">
-        </div>
-        <div class="four wide field">
-          <label class="custom-label-w-15">กำหนดค่าเป็น</label>
-          <input type="text" value="กลาง">
-        </div>
-      </div>
-
-      <div class="inline fields">
-        <div class="four wide field">
-          <label style="width: 9em;">เงื่อนไขที่ 3</label>
-          <select id="select3" class="ui dropdown">
-            <option value="0">More Than</option>
-            <option value="1">Between</option>
-            <option value="2">Less Than</option>
-          </select>
-        </div>
-        <div class="two wide field">
-          <input type="text" value="5">
-        </div>
-        <div class="one wide field"></div>
-        <div class="two wide field"></div>
-        <div class="three wide field">
-          <label class="custom-label-w-35">กำหนดค่าเป็น</label>
-          <input type="text" value="3">
-        </div>
-        <div class="four wide field">
-          <label class="custom-label-w-15">กำหนดค่าเป็น</label>
-          <input type="text" value="สูง">
-        </div>
-      </div>
+      <table id="tableSetting" class="ui small celled table" style="width: 100%;">
+        <thead>
+          <tr class="center aligned">
+            <th>เงื่อนไขที่</th>
+            <th>เงื่อนไข</th>
+            <th>ค่าที่ 1</th>
+            <th>ถึง</th>
+            <th>ค่าที่ 2</th>
+            <th>ค่า RL</th>
+            <th>แปลงค่า</th>
+            <th>สี</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>
+              <select id="selectCondition1" class="ui dropdown">
+                <option value="0">Equal</option>
+                <option value="1">Between</option>
+                <option value="1">Not Equal</option>
+              </select>
+            </td>
+            <td>4</td>
+            <td>ถึง</td>
+            <td></td>
+            <td>1</td>
+            <td>ต่ำ</td>
+            <td>
+              <select id="selectColor1" class="ui dropdown">
+                <option value="0">เขียว</option>
+                <option value="1">เหลือง</option>
+                <option value="1">แดง</option>
+              </select>
+            </td>
+            <td>
+              <a href="javascript:;">
+                ลบ
+              </a>
+            </td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>
+              <select id="selectCondition2" class="ui dropdown">
+                <option value="0">Between</option>
+                <option value="1">Equal</option>
+                <option value="1">Not Equal</option>
+              </select>
+            </td>
+            <td>1</td>
+            <td>ถึง</td>
+            <td>2</td>
+            <td>2</td>
+            <td>กลาง</td>
+            <td>
+              <select id="selectColor2" class="ui dropdown">
+                <option value="0">เหลือง</option>
+                <option value="1">เขียว</option>
+                <option value="1">แดง</option>
+              </select>
+            </td>
+            <td>
+              <a href="javascript:;">
+                ลบ
+              </a>
+            </td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>
+              <select id="selectCondition3" class="ui dropdown">
+                <option value="0">Between</option>
+                <option value="1">Equal</option>
+                <option value="1">Not Equal</option>
+              </select>
+            </td>
+            <td>3</td>
+            <td>ถึง</td>
+            <td>4</td>
+            <td>3</td>
+            <td>สูง</td>
+            <td>
+              <select id="selectColor3" class="ui dropdown">
+                <option value="0">แดง</option>
+                <option value="1">เหลือง</option>
+                <option value="1">เขียว</option>
+              </select>
+            </td>
+            <td>
+              <a href="javascript:;">
+                ลบ
+              </a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
 
     </div>
   </div>
