--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-5/int08-3-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-5/int08-3-5.component.html
@@ -62,7 +62,7 @@
           8.ระบบการควบคุมภายใน
         </div>
 
-        <div class="column" style="width: 16%; margin-left: -8%;">
+        <div class="column" style="width: 15%; margin-left: -8%;">
           &nbsp;
           <br> ตำแหน่งว่าง
           <br> ตำแหน่งว่าง
@@ -80,7 +80,7 @@
           &nbsp;
           <br> 0
           <br> 1 - 2
-          <br> <div style="margin-right: 6%">3 - 4</div>
+          <div style="margin-right: 6%">3 - 4</div>
         </div>
 
         <div class="column" style="width: 12%;">
@@ -299,7 +299,7 @@
 <div id="modalInt0835" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดเงื่อนไข RL และแปลงค่า
+    กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงระบบการควบคุมภายใน
   </div>
 
   <div class="content">
